clipboard: Don't emit changes for primary selection

The portal handles only selection

BUG: 512067
FIXED-IN: 6.5.3